pihole/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-route
  namespace: pihole
spec:
  hostnames:
    - pihole.lan
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-web
          port: 80
